--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: home
 ---
 
-<link rel="shortcut icon" type="image/x-icon" href="favicon2.ico">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
