--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 ---
 layout: home
 ---
-
-<link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico">
+<link rel="Shortcut Icon" type="image/ico" href="st.interakt.md/content/assets/img/favicon.ico">
