--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: home
 ---
-<link rel="Shortcut Icon" type="image/ico" href="st.interakt.md/content/assets/img/favicon.ico">
+<link rel="shortcut icon" type="image/ico" href="~/favicon.ico">
