--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: home
 ---
-<link rel="shortcut icon" type="image/ico" href="~/favicon.ico">
+<link rel="shortcut icon" type="image/ico" href="favicon.ico">
