--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: home
 ---
-<link rel="shortcut icon" type="image/x-icon" href="arelius.ico?v=2">
+<link rel="shortcut icon" href="arelius.ico?v=2" type="image/x-icon">
