--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: home
 ---
+<link rel="shortcut icon" href="arelius.ico?v=2" type="image/x-icon" />
+
+<!--
 <link href="data:image/x-icon;base64,AAABAAEAANQAAAEAIACoagMAFgAAACgAAAAAAQAAqAEAAAEAIAAAAAAAAFADAPMOAADzDgAAAAAA
 AAAAAAD/////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////
@@ -3930,6 +3933,5 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
-
+-->
 <!--https://stackoverflow.com/a/16375622 -->
-<!-- <link rel="shortcut icon" href="arelius.ico?v=2" type="image/x-icon"> -->
